[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/radio_intercept/RadioQuestA.gd" id="1_script"]

[node name="RadioQuestA" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="SafeArea" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 12

[node name="RootPanel" type="Panel" parent="SafeArea"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="RootPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="HeaderBar" type="HBoxContainer" parent="RootPanel/VBox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
alignment = 1

[node name="BackBtn" type="Button" parent="RootPanel/VBox/HeaderBar"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "НАЗАД"

[node name="Spacer" type="Control" parent="RootPanel/VBox/HeaderBar"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="TaskLabel" type="Label" parent="RootPanel/VBox/HeaderBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Перехват... Мощность алфавита: 128"

[node name="OscilloBox" type="PanelContainer" parent="RootPanel/VBox"]
custom_minimum_size = Vector2(0, 280)
layout_mode = 2

[node name="OscilloArea" type="Control" parent="RootPanel/VBox/OscilloBox"]
layout_mode = 2
clip_contents = true

[node name="OscilloNode" type="Node2D" parent="RootPanel/VBox/OscilloBox/OscilloArea"]

[node name="OscLine" type="Line2D" parent="RootPanel/VBox/OscilloBox/OscilloArea/OscilloNode"]
width = 3.0
default_color = Color(0, 0.8, 0.4, 1)
antialiased = true

[node name="TunerRow" type="HBoxContainer" parent="RootPanel/VBox"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
alignment = 1

[node name="BitsLabel" type="Label" parent="RootPanel/VBox/TunerRow"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Биты: 1"

[node name="BitsSlider" type="HSlider" parent="RootPanel/VBox/TunerRow"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_vertical = 4
min_value = 1.0
max_value = 10.0
value = 1.0

[node name="ButtonsRow" type="HBoxContainer" parent="RootPanel/VBox"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="HintButton" type="Button" parent="RootPanel/VBox/ButtonsRow"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
text = "Ассистент"

[node name="ConfirmButton" type="Button" parent="RootPanel/VBox/ButtonsRow"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
text = "Подтвердить"

[node name="HintLabel" type="Label" parent="RootPanel/VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
horizontal_alignment = 1

[connection signal="pressed" from="SafeArea/RootPanel/VBox/HeaderBar/BackBtn" to="." method="_on_back_pressed"]
[connection signal="value_changed" from="SafeArea/RootPanel/VBox/TunerRow/BitsSlider" to="." method="_on_slider_value_changed"]
[connection signal="pressed" from="SafeArea/RootPanel/VBox/ButtonsRow/HintButton" to="." method="_on_hint_pressed"]
[connection signal="pressed" from="SafeArea/RootPanel/VBox/ButtonsRow/ConfirmButton" to="." method="_on_confirm_pressed"]
